[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Guns/W_09_Magnum.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Guns/Hold/W_84_Luger_Hold.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Guns/Pick/W_84_Luger_Pick.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Projectiles/Proj-84-Luger.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/Guns/W_84_Luger.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("POS_Gun/Gun_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("POS_Gun/Fire_Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=2]
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("POS_Gun/Gun_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("POS_Gun/Fire_Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[node name="W_84_Luger_Hold" type="Node2D"]
script = ExtResource( 2 )
luger_pickup = ExtResource( 3 )
projectile = ExtResource( 4 )

[node name="Shoot_Timer" type="Timer" parent="."]
wait_time = 0.65

[node name="POS_Gun" type="Node2D" parent="."]

[node name="Gun_Sprite" type="Sprite" parent="POS_Gun"]
texture = ExtResource( 5 )

[node name="Fire_Sprite" type="Sprite" parent="POS_Gun"]
position = Vector2( 17, -4 )
texture = ExtResource( 1 )
hframes = 5
frame = 4

[node name="POS" type="Node2D" parent="POS_Gun"]

[node name="Shoot" type="Position2D" parent="POS_Gun/POS"]
position = Vector2( 15, -4 )

[node name="Throw" type="Position2D" parent="POS_Gun/POS"]
position = Vector2( 15, 0 )

[node name="Raycast" type="Node2D" parent="POS_Gun"]

[node name="Shoot" type="RayCast2D" parent="POS_Gun/Raycast"]
position = Vector2( 3, -4 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 514

[node name="Throw" type="RayCast2D" parent="POS_Gun/Raycast"]
enabled = true
cast_to = Vector2( 26, 0 )
collision_mask = 2570

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/Shoot = SubResource( 2 )
[connection signal="timeout" from="Shoot_Timer" to="." method="_on_Shoot_Timer_timeout"]
